--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -37,4 +37,12 @@ jobs:
           SONAR_HOST_URL: ${{ secrets.SONAR_HOST_URL }}
           SONAR_LOGIN: ${{ secrets.SONAR_LOGIN }} 
           SONAR_PASSWORD: ${{ secrets.SONAR_PASSWORD }}
-        run: mvn -f accounts/pom.xml -B verify org.sonarsource.scanner.maven:sonar-maven-plugin:sonar -Dsonar.projectKey=microservice-4/accounts -Dsonar.projectName=microservice-4/accounts -Dsonar.host.url=${{ env.SONAR_HOST_URL }} -Dsonar.login=${{ env.SONAR_LOGIN }} -Dsonar.password=${{ env.SONAR_PASSWORD }}'
+        
+        steps:
+          - name: Run SonarQube Analysis
+            run: mvn -f accounts/pom.xml -B verify org.sonarsource.scanner.maven:sonar-maven-plugin:sonar \
+              -Dsonar.projectKey=microservice-4/accounts \
+              -Dsonar.projectName=microservice-4/accounts \
+              -Dsonar.host.url=${{ env.SONAR_HOST_URL }} \
+              -Dsonar.login=${{ env.SONAR_LOGIN }} \
+              -Dsonar.password=${{ env.SONAR_PASSWORD }}
