--- a/accounts/pom.xml
+++ b/accounts/pom.xml
@@ -16,6 +16,8 @@
 	<description>Microservice for Accounts</description>
 	<properties>
 		<java.version>21</java.version>
+		 <sonar.organization>zohakhan2023</sonar.organization>
+  		 <sonar.host.url>https://sonarcloud.io</sonar.host.url>
 	</properties>
 	<dependencies>
 		<dependency>
