--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -35,4 +35,8 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}  # Needed to get PR information, if any
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
-        run: mvn -f accounts/pom.xml -B verify org.sonarsource.scanner.maven:sonar-maven-plugin:sonar -Dsonar.projectKey=zohakhan2023_microservice-4
+        run: |
+          mvn -f accounts/pom.xml -B verify org.sonarsource.scanner.maven:sonar-maven-plugin:sonar -Dsonar.projectKey=zohakhan2023_microservice-4
+          curl -u ${{ secrets.SONAR_TOKEN }}: "https://sonarcloud.io/zohakhan2023/accounts/api/qualityprofiles/search"
+          curl -u ${{ secrets.SONAR_TOKEN }}: "https://sonarcloud.io/zohakhan2023/accounts/api/qualitygates/list"
+          
